@@ -1,3 +1,9 @@
+2009-01-04  Mikael Morin  <mikael.morin@tele2.fr>
+
+	PR fortran/38536
+	* gfortran.dg/c_loc_tests_13.f90: New test.
+	* gfortran.dg/c_loc_tests_14.f90: New test.
+
 2009-01-03  Daniel Franke  <franke.daniel@gmail.com>
 
 	* gfortran.dg/func_result_4.f90: New.
